--- a/css/style.css
+++ b/css/style.css
@@ -33,12 +33,20 @@
 
 /*mycssstart*/
 .image-wrapper{
-    width: 300px;
+    padding: 0px;
+    max-height: 250px;
+    overflow: hidden;
 }
+
+.min-img:before{
+    content: "TEXT";
+}
+
 .min-img{
     display: block;
     max-width: 100%;
 }
+
 
 .max-img{
     display: block;
