--- a/css/style.css
+++ b/css/style.css
@@ -7,19 +7,12 @@
     left: 0;
     background: rgba(0,0,0,0.8);
     z-index: 99999;
-    /*-webkit-transition: opacity 400ms ease-in;
-    -moz-transition: opacity 400ms ease-in;
-    transition: opacity 400ms ease-in;*/
     transition: 1s ease-in-out;
     display: none;
     pointer-events: none;
 }
 
-/*.modalDialog:target {
-    display: block;
-    pointer-events: auto;
-}*/
- 
+
 .modalDialog > div {
     position: relative;
     height: 100%;
@@ -34,19 +27,19 @@
 /*mycssstart*/
 .image-wrapper{
     padding: 0px;
-    max-height: 250px;
+    width: 270px;
+    height: 150px;
     overflow: hidden;
 }
 
-.min-img:before{
-    content: "TEXT";
-}
 
 .min-img{
     display: block;
     max-width: 100%;
 }
-
+.open-photo{
+    cursor: pointer;
+}
 
 .max-img{
     display: block;
@@ -91,3 +84,45 @@
     right: 20px;
 }
 
+/*for the second image*/
+.min-img-wrapper{
+    position: relative;
+}
+.min-img{
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+
+}
+.min-img-layout{
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top:40%;
+    left: 44%;
+    transform: translate(-50%;-50%);
+    -ms-transform: translate(-50%;-50%);
+}
+.min-img-wrapper:hover .min-img{
+    opacity: 0.3;
+    transform: scale(1.15,1.15);
+    -webkit-transform:scale(1.15,1.15);
+    -moz-transform:scale(1.15,1.15);
+    -ms-transform:scale(1.15,1.15);
+    -o-transform:scale(1.15,1.15);
+}
+
+.min-img-wrapper:hover .min-img-layout{
+    opacity: 1;
+}
+.loop{
+    background: url('../img/loop.png') center center / cover;
+    height: 45px;
+    width: 45px;
+    z-index: -1;
+    cursor: pointer;
+    
+}
