--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,14 @@
+/*fonts*/
+@font-face{
+	font-family: Open sans;
+	src: url(../font/2211.ttf);
+}
+
+body{
+	font-family: 'Open sans';
+	/*font-family: 'Century Gothic';*/
+}
+
 /*header*/
 
 #logo{
@@ -26,6 +37,7 @@
 #navbar a {
 	text-transform: uppercase;
 	font-size: 15px;
+ 	font-family: 'Century Gothic';
 	font-weight: lighter;
 	line-height: 100px;
   	color: #2d2d2d;
@@ -33,6 +45,8 @@
   	text-decoration: none;
   	font-weight: bold;
   	display: inline-block;
+  	letter-spacing: 5px;
+
 }
 
 header .page_title{
@@ -196,6 +210,7 @@ a.underline-link{
 	line-height: 1;
 	text-decoration:none;
     cursor: pointer;
+    font-family: 'Century Gothic';
 
 }
 a.underline-link:after {
@@ -218,6 +233,7 @@ a.underline-link:focus:after {
 	color: #aeadad;
 	font-size: 15px;
 	font-weight: lighter;
+	font-family: 'Century Gothic';
 }
 .short-description{
 	margin-bottom: 30px;
