--- a/css/style.css
+++ b/css/style.css
@@ -49,10 +49,9 @@
     left: 0;
     bottom: 0;
     right: 0;
-    margin: auto;
+    margin: 1% auto;
     max-width: 100%;
-    max-height: 100%;
-
+    max-height: 90%;
 }
 /*.max-img-wrapper*/
 .close-popup-image{
@@ -67,22 +66,27 @@
 /*arrows*/
 .control-arrows{
     position: absolute;
-    top:50%;
+    top:40%;
     left: 20px;
     cursor: pointer;
     display: block;
-    height: 70px;
-    width: 70px;
-    border-radius: 70px;
-    background: grey;
-    text-align: center;
-    line-height: 70px;
-
+    color: white;
+    font-size: 70px;
+    -webkit-transition: color 1s ease-out;
+     -moz-transition: color 1s ease-out;
+     -o-transition: color 1s ease-out;
+     transition: color 1s ease-out;
 }
+
+.control-arrows:hover{
+    color: #00cbc7;
+}
+
 .right-arrow{
     left: auto;
     right: 20px;
 }
+
 
 /*for the second image*/
 .min-img-wrapper{
