--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body{
 
 #logo{
 	height: 150px;
-	background: url('../img/logo.png') center center / cover;
+	background: url('../img/logo_grey.png') center center / cover;
 }
 
 /*#navbar {
@@ -50,7 +50,7 @@ body{
 }*/
 .nav-wrapper{
 	margin-top: 30px;
-    font-weight: 600;
+    font-weight: 500;
 }
 .navbar{
 	border: 0px;
@@ -90,8 +90,12 @@ footer ul{
 footer h6{
 	font-size: 15px;
 	text-transform: uppercase;
+	letter-spacing: 5px;
+	font-weight: bold;
 }
 #footer_navbar{
+	font-family: 'Century Gothic';
+	letter-spacing: 5px;
 	text-transform: capitalize;
 }
 #footer_navbar a{
@@ -102,6 +106,8 @@ footer h6{
 
 #footer_contacts{
 	padding-top: 15px;
+	font-family: 'Century Gothic';
+	letter-spacing: 5px;
 }
 
 #footer_contacts span{
@@ -142,6 +148,9 @@ footer h6{
 }
 #m-team a{
 	color: #00dade;
+}
+#m-team .underline-link{
+	font-size: 13px;
 }
 /*footer*/
 
@@ -271,38 +280,24 @@ a.underline-link:focus:after {
 }
 .button29 {
 	color: rgba(0,0,0,1);
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	-o-transition: all 0.3s;
-	transition: all 0.3s;
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	-o-transition: all 0.5s;
+	transition: all 0.5s;
 	position: relative;
-	border-right-width: 1px;
-	border-left-width: 1px;
-	border-right-style: solid;
-	border-left-style: solid;
-	border-right-color: rgba(0,0,0,0.5);
-	border-left-color: rgba(0,0,0,0.5);
+	border: 1px solid rgba(0,0,0,0.5);
+	overflow: hidden;
 
 }
-.button29 span{
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	-o-transition: all 0.3s;
-	transition: all 0.3s;
-	}
-.button29:hover span{
-	letter-spacing: 2px;
-	}
 .button29:hover{
-	border-right-color: rgba(0,0,0,0);
-	border-left-color: rgba(0,0,0,0);
+	border: 1px solid rgba(0,0,0,0);
 }
-
 .button29 a{
 	color: rgba(51,51,51,1);
 	text-decoration: none;
 	display: block;
 }
+
 .button29::before{
 	content: '';
 	position: absolute;
@@ -311,51 +306,28 @@ a.underline-link:focus:after {
 	width: 100%;
 	height: 1px;
 	z-index: 1;
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	-o-transition: all 0.3s;
-	transition: all 0.3s;
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	-o-transition: all 0.5s;
+	transition: all 0.5s;
+	-webkit-transform: translate(-100%, -600%) rotate(30deg);
+	transform: translate(-100%, -600%)  rotate(30deg);
 	background-color: rgba(0,0,0,0.5);
+	-webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+	transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
 	
 }
 .button29:hover::before{
-	-webkit-transform: translate(0,-25px) rotate(-45deg);
-	-moz-transform: translate(0,-25px) rotate(-45deg);
-	transform: translate(0,-25px) rotate(-45deg);
+	-webkit-transform: translate(0,0);
+	transform: translate(0,0);
 }
-.button29::after{
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 1px;
-	z-index: 1;
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	-o-transition: all 0.3s;
-	transition: all 0.3s;
-	background-color: rgba(0,0,0,0.5);
-}
+
 .button29:hover::after{
 	-webkit-transform: translate(0,25px) rotate(45deg);
 	-moz-transform: translate(0,25px) rotate(45deg);
 	transform: translate(0,25px) rotate(45deg);
 }
-/*.button{
-	display: block;
-	height: 50px;
-	line-height: 50px;
-	color: black;
-	border: 1px solid black;
-	width: 185px;
-	text-align: center;
-	margin-top: 25px;
-}
-.button:hover{
-	text-decoration: none;
-	color: black;
-}*/
+
 .photosession-preview-wrapper{
 	padding-bottom: 50px;
 }
