--- a/css/main.css
+++ b/css/main.css
@@ -535,11 +535,12 @@ a.underline-link:focus:after {
 
 
 /*services photo page*/
-.service-photo-wrapper img{
+.service-photo-wrapper .service-main-photo{
 	width: 100%;
 }
 .service-photo-wrapper{
 	float: left;
+	z-index: 11;
 }
 .service-description-wrapper{
 	position: relative;
@@ -549,7 +550,7 @@ a.underline-link:focus:after {
 	padding: 90px 30px;
 	margin-top: 70px;
 	width:58.33333333%;
-	z-index: -1;
+	z-index: 10;
 	height: 420px;
 }
 
@@ -565,4 +566,62 @@ a.underline-link:focus:after {
     bottom: 110px;
     font-family: 'Century Gothic';
     left: 14%;
+    z-index: 1000000;
+}
+
+.breadcrumb{
+	background-color: inherit;
+}
+.breadcrumb .active{
+	color: inherit;
+}
+
+.breadcrumb>li+li:before {
+	padding:0 5px;
+	color:inherit;
+	content:"-"
+}
+.service-number{
+	width: 35px;
+	height: 35px;
+	background-color: #00c3ca;
+	border-radius: 100px;
+	float: left;
+	margin-left: 15px;
+	text-align: center;
+	font-size: 15px;
+	line-height: 35px;
+	color: #fff;
+	font-weight: bold;
+	display: inline-block;
+	cursor: pointer;
+}
+.service-title-wrapper{
+	padding-bottom: 35px;
+}
+.service-title-wrapper h3{
+	display: inline-block;
+	margin:0;
+	padding-left: 20px;
+	line-height: 33px;
+}
+.service-title-wrapper .underline-link{
+	font-size: 24px;
+}
+
+.service-photo-icon{
+	display: block;
+	font-size: 17px;
+	height: 25px;
+	line-height: 25px;
+}
+.service-photo-icon img{
+	padding-right: 10px;
+}
+
+.details-description{
+	padding-top: 20px;
+}
+.service-wrapper{
+	padding-bottom: 70px;
 }
